kubernetes/apps/istio-ingress/gateway/resources/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.mcf.io/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istio-ingressgateway
  annotations:
    io.cilium/lb-ipam-ips: 192.168.45.225
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      hostname: '*.milton.mcf.io'
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: milton-mcf-io-cert-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-external
      hostname: '*.mcf.io'
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: mcf-io-cert-tls
      allowedRoutes:
        namespaces:
          from: All
